--- a/templates/rebase.html
+++ b/templates/rebase.html
@@ -257,6 +257,8 @@
   <script src="{{ url_for('static', filename='vendors/list.js/list.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/theme.js') }}"></script>
   <script src="{{ url_for('static', filename='vendors/toastify-js/toastify.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/chillyfeely.js') }}"></script>
+
   <script>
     function getBodyBgColor() {
       return getComputedStyle(document.documentElement)
