--- a/static/css/user.css
+++ b/static/css/user.css
@@ -3,3 +3,22 @@
 /* -------------------------------------------------------------------------- */
 /* prettier-ignore */
 /*# sourceMappingURL=user.css.map */
+.loader-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1050;
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out;
+  }
+  
+  .loader-overlay.d-none {
+    display: none !important;
+  }
+  
+  .loader-overlay.fade-out {
+    opacity: 0;
+  }
