--- a/templates/data-management.html
+++ b/templates/data-management.html
@@ -111,6 +111,7 @@
             const tc = register.tc || "";
             const tel = register.tel || "";
             const address = register.address || "";
+            const uid = register.pair_id || "";
             
             row.innerHTML = `
               <td data-bs-toggle="tooltip" title="${name}">${name}</td>
@@ -131,6 +132,7 @@
                   </button>
                   <div class="dropdown-menu dropdown-menu-end border py-0">
                     <div class="py-2">
+                      <a class="dropdown-item" href="/update-tuple/${uid}" >Düzenle</a>
                       <a class="dropdown-item text-danger" href="#!" onclick="deleteRegister('${name}', '${surname}', '${birthdate}', 'Donor')">Sil</a>
                     </div>
                   </div>
@@ -162,6 +164,7 @@
             const tc = register.tc || "";
             const tel = register.tel || "";
             const address = register.address || "";
+            const uid = register.pair_id || "";
             
             row.innerHTML = `
               <td data-bs-toggle="tooltip" title="${name}">${name}</td>
@@ -182,6 +185,7 @@
                   </button>
                   <div class="dropdown-menu dropdown-menu-end border py-0">
                     <div class="py-2">
+                      <a class="dropdown-item" href="/update-tuple/${uid}" >Düzenle</a>
                       <a class="dropdown-item text-danger" href="#!" onclick="deleteRegister('${name}', '${surname}', '${birthdate}', 'Patient')">Sil</a>
                     </div>
                   </div>
